Fixing: The blackbox on the header, making it the full size of the navigation and some aligning

--- a/site-sass/brennan/site.header.scss
+++ b/site-sass/brennan/site.header.scss
@@ -25,16 +25,20 @@ header{
 
         background-color: #212121;
         display: flex;
-
+				height: 94px;
+				position: absolute;
+				top: 31px;
+				left: 290px;
 
         h1 {
-
+						height: 100%;
             align-self: left;
             padding-left: 20px;
             letter-spacing: 0.06em;
             @include font-size(22px);
             line-height: 27px;
             margin: 0;
+				    padding: 20px;
         }
 
     }
